css/style.css
body {
    font-family: 'Merriweather', serif;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(4, auto);
}

header{
    grid-row: 1/span 1;
    grid-column: 1/-1;
}

header h1{
    text-align: center;
    font-weight: bold;
    font-size: xx-large;
    background-color: black;
    color: white;
}

#nav_bar {
    background: black url(../images/twom_gallery2.jpeg) center;
    height: 150px;
    display: flex;
}

#nav_bar ul{
    align-self: center;
    justify-items: center;
    margin-left: auto;
    margin-right: auto;
}

#nav_bar li{
    text-align: center;
    margin-left: auto;
    margin-right: auto;
}

#nav_bar a {
    font-size: larger;
    padding: 0 1vw 0 1vw;
    background-color: rgb(0, 0, 0);
    text-decoration: none;
    color: rgb(160, 160, 160);
    line-height: 1.5;
}

#nav_bar a:hover {
    color: rgb(200, 200, 200);
}

#nav_bar a:focus{
    outline: none;
    background: rgba(87,87,87,0.3);
    text-decoration: none;
    color: white;
}

#nav_bar a.active-page{
    color: white;
    font-weight: bold;
    background-color: rgb(0, 0, 0);
    text-decoration: underline;
}

.skip{
    animation: slidein 1s ease-in-out;
    display: block;
    width: fit-content;
    margin: .2em auto;
    border: 2px solid black;
    border-radius: 5px;
    padding: .2em;
    text-decoration: none;
    color: black;
}

@keyframes slidein{
    from { transform: translate(0, 15px); opacity: 0;}
    to {transform: translate(0,0px); opacity: 1;}
}

.skip:hover{
    background-color: black;
    color: white;
}

.skip:focus{
    background-color: gray;
    border: 2px solid gray;
}

#back_to_nav{
    position: fixed;
    z-index: 1;
    top: 2.1em;
    right: 0px;
    padding: .2em;
    text-decoration: none;
    font-size: medium;
    color: white;
    background-color: rgba(0, 0, 0, 0.5);
}

main h2{
    padding: .3em;
    margin: .5em auto;
    color: white;
    background-color: black;
    text-align: center;
    font-weight: bold;
    font-size: larger;
}

main h2 a{
    text-decoration: none;
    color: white;
}

main h2 a:hover{
    color: black;
    background-color: white;
    border: 2px solid black;
    border-radius: .2em;
}

main h3{
    padding: .3em;
    margin: .5em 1em;
    color: white;
    background-color: black;
    text-align: center;
    font-size: large;
}

main p{
    margin: 1em 2em;
    text-align: left;
    line-height: 1.8em;
}

main ul{
    margin: 1em 3.5em;
    line-height: 1.8em;
    list-style-type: circle;
}

main img{
    box-sizing: border-box;
    display: block;
    width: 100%;
    max-width: 500px;
    margin: 0 auto;
    filter: grayscale(1);
    transition: filter 0.5s ease;
}

main img:hover{
    filter: grayscale(0);
    transition: filter 0.5s ease;
    
}

.caption{
    margin: .1em auto .2em;
    text-align: center;
    filter: opacity(0);
    transition: filter .5s ease;
}

figure:hover > .caption{
    filter: opacity(1);
    transition: filter .5s ease;
}

#homepage_content,#publisherfacts_content,#dlc_content{
    grid-row: 3/span 1;
    grid-column: 1/-1;
}

#gallery_content{
    grid-column: 1/-1;
    grid-row: 2/-2;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    justify-items: center;
    align-items: center;
    background: rgba(90, 134, 139, 0.5) url('../images/background1.jpg');
    background-attachment: scroll;
    background-repeat: no-repeat;
    background-size: auto 100%;
    background-position: center;
}

#gallery_content figure{
    max-width: fit-content;
    min-width: 300px;
    overflow: hidden;
    margin-left: auto;
    margin-right: auto;
}

#gallery_content img{
    box-sizing: border-box;
    display: block;
    min-width: 60vw;
    margin-left: auto;
    margin-right: auto;
    filter: grayscale(0);
    transition: transform .5s ease;
}

#gallery_content img:hover{
    transform: scale(1.2);
    transition: transform .5s ease;
}

#gallery_content p{
    font-family: 'Rock Salt', cursive;
    background: rgba(233, 233, 233, 0.603);
    padding: .2em .5em;
    line-height: 3;
    font-weight: bold;
    text-align: center;
}

#left_grid{
    grid-row: 2/span 1;
    grid-column: 1/-1;
}

form{
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    align-content: center;
    justify-content: center;
}

label{
    text-align: center;
    line-height: 3em;
}

button{
    margin-left: auto;
    margin-right: auto;
}

footer{
    padding: 2vh;
    grid-row: -2/span 1;
    grid-column: 1/-1;
    text-align: center;
    color: white;
    font-weight: bold;
    background-color: black;
}

@media all and (min-width: 700px){
    #nav_bar ul{
        justify-items: auto;
    }
    
    #nav_bar li{
        display: inline;
        width: 20%;
    }

    #homepage_content,#publisherfacts_content,#dlc_content{
        display: grid;
        grid-template-columns: repeat(2,1fr);
        grid-auto-rows: 70vh;
    }

    section{
        overflow: scroll;
    }

    #gallery_content p{
        width: 35vw;
        margin-left: auto;
        margin-right: auto;
    }
}

@media all and (min-width: 1000px){
    #nav_bar{
        display: block;
        height: auto;
    }

    #nav_bar li{
        display: block;
        text-align: left;
        margin: 0;
        width: auto;
    }

    .skip{
        margin: .2em auto .2em 0;
    }

    body{
        grid-template-columns: 15% 70% 15%;
        grid-template-rows: repeat(3, auto);
    }

    #homepage_content,#publisherfacts_content,#dlc_content{
        display: block;
        grid-row: 2/span 1;
        grid-column: 2/span 1;
    }

    section{
        overflow: auto;
    }

    #left_grid{
        grid-column: 1/span 1;
        padding-top: 2em;
    }

    form{
        border: .1em solid black;
        overflow: scroll;
    }

    #gallery_content{
        background-attachment: fixed;
        background-position: right;
        flex-direction: row;
    }
  }

@media (prefers-reduced-motion) {
    .skip{
        animation: none;
    }
  }

